Api endpoint edit jobs

--- a/job.html
+++ b/job.html
@@ -192,7 +192,7 @@
           <i class="fa-solid fa-plus"></i> Add Job
         </button>
 
-        <div class="filter-container">
+        <!-- <div class="filter-container">
           <input
             type="text"
             id="searchInput"
@@ -206,7 +206,7 @@
           <button class="filter-btn" onclick="applyFilters()">
             <i class="fa-solid fa-filter"></i> Filter Jobs
           </button>
-        </div>
+        </div> -->
 
         <div id="loading">Loading...</div>
 
