--- a/company.html
+++ b/company.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/pages/company.css"> -->
 
     <link rel="stylesheet" href="css/style.css">
-    <style>
+    <!-- <style>
         .confirmation-dialog {
             background-color: white;
             border-radius: 10px;
@@ -33,7 +33,7 @@
             color: #666;
             margin-bottom: 25px;
         }
-        </style>
+        </style> -->
 
 </head>
 
