--- a/forget-password.html
+++ b/forget-password.html
@@ -68,7 +68,7 @@
                             <i class="far fa-envelope"></i>
                             <input type="email" id="getMail" class="input-one" placeholder="Email">
                         </div>
-                        <button type="submit" class="btn-common btn-activity-confirm">Signup</button>
+                      <button type="submit" class="btn-common btn-activity-confirm">Signup</button>
                     </form>
                 </div>
                 <div class="activity-switch">
@@ -92,6 +92,100 @@
     <!-- Customized Javascript File -->
     <script src="assets/js/svg.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const form = document.querySelector("form");
+    const emailInput = document.getElementById("getMail");
+    const submitBtn = document.querySelector(".btn-activity-confirm");
+
+    form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const email = emailInput.value.trim();
+
+        if (!email || !email.includes("@")) {
+            alert("يرجى إدخال بريد إلكتروني صالح");
+            return;
+        }
+
+        submitBtn.disabled = true;
+        submitBtn.textContent = "Sending...";
+
+        fetch("https://jobizaa.com/api/admin/password/reset-request", {
+            method: "POST",
+            headers: {
+                "Accept": "application/json",
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ email: email })
+        })
+        .then(async res => {
+            const data = await res.json();
+            if (!res.ok) throw new Error(data.message || "فشل في إرسال الرمز");
+            return data;
+        })
+       .then(() => {
+    localStorage.setItem("emailToVerify", email);
+    alert("تم إرسال الكود إلى بريدك الإلكتروني.");
+    window.location.href = "cod.html"; // ← تم التوجيه إلى الصفحة المطلوبة
+})
+
+        .catch(error => {
+            alert(error.message || "حدث خطأ غير متوقع");
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.textContent = "Signup";
+        });
+    });
+});
+</script>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById("resetRequestForm");
+    const emailInput = document.getElementById("getMail");
+    const submitBtn = document.querySelector(".btn-activity-confirm");
+
+    form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const email = emailInput.value.trim();
+
+        if (!email || !email.includes("@")) {
+            alert("يرجى إدخال بريد إلكتروني صالح.");
+            return;
+        }
+
+        submitBtn.disabled = true;
+        submitBtn.textContent = "Sending...";
+
+        fetch("https://jobizaa.com/api/admin/password/reset-request", {
+            method: "POST",
+            headers: {
+                "Accept": "application/json",
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ email })
+        })
+        .then(async res => {
+            const data = await res.json();
+            if (!res.ok) throw new Error(data.message || "فشل في إرسال الكود.");
+            return data;
+        })
+        .then(() => {
+            localStorage.setItem("emailToVerify", email);
+            alert("تم إرسال الكود إلى بريدك الإلكتروني.");
+            window.location.href = "verify-code.html"; // ← غيري اسم الصفحة حسب صفحتك التالية
+        })
+        .catch(err => {
+            alert(err.message || "حدث خطأ، يرجى المحاولة لاحقًا.");
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            submitBtn.textContent = "Signup";
+        });
+    });
+});
+</script>
+
 </body>
 
 </html>
