--- a/company.html
+++ b/company.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Company Management</title>
+ <!-- fontAwesome -->
+    <link rel="stylesheet" href="css/vendor/all.min.css"> 
+    
+    <link rel="stylesheet" href="./css/pages/company.css">
 
-<<<<<<< HEAD
     <link rel="stylesheet" href="css/style.css" />
     <style>
       .confirmation-dialog {
@@ -29,41 +32,10 @@
       }
     </style>
   </head>
-=======
 
-    <!-- fontAwesome -->
-    <!-- <link rel="stylesheet" href="css/vendor/all.min.css"> -->
-    <!-- 
-    <link rel="stylesheet" href="./css/pages/company.css"> -->
 
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <style>
-        .confirmation-dialog {
-            background-color: white;
-            border-radius: 10px;
-            padding: 25px;
-            width: 350px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
-        .confirmation-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 15px;
-            color: #333;
-        }
-        .confirmation-message {
-            font-size: 16px;
-            color: #666;
-            margin-bottom: 25px;
-        }
-        </style> -->
 
-</head>
 
-<body>
-
->>>>>>> 40a38fe26c5fb8920afba1ae45b56f6cd176e248
 
   <body>
     <div class="header">
