--- a/company.html
+++ b/company.html
@@ -238,7 +238,7 @@
             <thead>
               <tr>
                 <th>Company Name</th>
-                <th>Email</th>
+                <th>size</th>
                 <th>Job Count</th>
                 <th>Status</th>
                 <th>Actions</th>
