--- a/job.html
+++ b/job.html
@@ -298,11 +298,17 @@
               <option value="Pending">Pending</option>
             </select>
             <!-- Save Job Button -->
-            <button onclick="saveJob()" class="btn" id="saveButton">
+            <button
+              onclick="saveJob()"
+              class="btn btn-outline-primary"
+              id="saveButton">
               <i class="fa-solid fa-save"></i> Save
             </button>
             <!-- Update Job Button -->
-            <button onclick="saveChanges()" class="btn" id="updateButton">
+            <button
+              onclick="saveChanges()"
+              class="btn btn-outline-success"
+              id="updateButton">
               <i class="fa-solid fa-pen"></i> update
             </button>
           </div>
