--- a/signup.html
+++ b/signup.html
@@ -232,7 +232,7 @@
                 
                 // Redirect to verification page after 2 seconds
                 setTimeout(() => {
-                    window.location.href = 'verify-code.html';
+                    window.location.href = 'verify code.html';
                 }, 2000);
             })
             .catch(error => {
