--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                                     <p class="card-category">Users</p>
 
-                                    <h4 class="card-title">1,294</h4>
+                                    <h4 class="card-title" id="userCount">1,294</h4>
 
                                 </div>
                             </div>
@@ -278,7 +278,7 @@
 
                                     <p class="card-category">companies</p>
 
-                                    <h4 class="card-title">500</h4>
+                                    <h4 class="card-title" id="companyCount">500</h4>
 
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
 
                                     <p class="card-category">jobs</p>
 
-                                    <h4 class="card-title">1,294</h4>
+                                    <h4 class="card-title" id="jobCount">1,294</h4>
 
                                 </div>
                             </div>
@@ -314,7 +314,7 @@
 
                                     <p class="card-category">Active User </p>
 
-                                    <h4 class="card-title">1,294</h4>
+                                    <h4 class="card-title" id="activeUser">1,294</h4>
 
                                 </div>
                             </div>
