--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
       </ul>
     </div>
 
+    <!-- main panel -->
     <section class="main-panel">
       <div class="container-fluid">
         <h3 class="dashboard">Dashboard</h3>
@@ -363,49 +364,6 @@
             </div>
           </div>
         </div>
-
-        <!-- <div class="row">
-
-                <div class="col-md-12 mb-4">
-
-
-                    <div class="orders-container">
-                        <div class="orders-header">
-                            <h2>Jobs</h2>
-                            <div class="filter-options">
-                                <select id="filter-period">
-                                    <option value="monthly">Monthly</option>
-                                    <option value="weekly">Weekly</option>
-                                </select>
-                                <select id="filter-date">
-                                    <option value="july-2023">July 2023</option>
-                                    <option value="august-2023">August 2023</option>
-                                </select>
-
-                                <a href="#" class="view-all">View All</a>
-
-                            </div>
-                        </div>
-
-                        <table class="orders-table">
-                            <thead>
-                                <tr>
-                                    <th>Jobs ID</th>
-                                    <th>Jobs Name</th>
-                                    <th>JobsDate</th>
-                                    <th>Price</th>
-                                    <th>Jobs Status</th>
-                                    <th>Payment Method</th>
-                                </tr>
-                            </thead>
-                            <tbody id="orders-data">
-                            </tbody>
-                        </table>
-                    </div>
-
-
-                </div>
-            </div> -->
 
         <div class="row">
           <div class="col-md-12">
