--- a/nofigation.html
+++ b/nofigation.html
@@ -179,6 +179,23 @@
                 <span class="notification-time">15m ago</span>
             </div>
         </div>
+        <!-- Notification 2 -->
+        <div class="notification-item">
+            <div class="notification-icon">
+                <img src="./images/ava6.jpg" alt="Vote">
+            </div>
+            <div class="notification-content">
+                <h3 class="notification-title">Last Chance to Vote</h3>
+                <p class="notification-details">
+                    2018 Falcon Choice Awards - Voting closes November 26
+                </p>
+                <div class="notification-actions">
+                    <button class="action-button primary-btn">Vote Now</button>
+                    <button class="action-button secondary-btn">View Nominees</button>
+                </div>
+                <span class="notification-time">10m ago</span>
+            </div>
+        </div>
 
         <!-- Notification 3 -->
         <div class="notification-item">
