--- a/company.html
+++ b/company.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Company Management</title>
- <!-- fontAwesome -->
-    <link rel="stylesheet" href="css/vendor/all.min.css"> 
-    
-    <link rel="stylesheet" href="./css/pages/company.css">
+    <!-- fontAwesome -->
+    <link rel="stylesheet" href="css/vendor/all.min.css" />
+
+    <link rel="stylesheet" href="./css/pages/company.css" />
 
     <link rel="stylesheet" href="css/style.css" />
     <style>
@@ -32,10 +32,6 @@
       }
     </style>
   </head>
-
-
-
-
 
   <body>
     <div class="header">
@@ -287,8 +283,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/company.js"></script>
     <script src="./js/main.js" defer></script>
-   <script>
-
-</script>
+    <script></script>
   </body>
 </html>
