--- a/forget-password.html
+++ b/forget-password.html
@@ -126,7 +126,7 @@ document.addEventListener("DOMContentLoaded", function () {
        .then(() => {
     localStorage.setItem("emailToVerify", email);
     alert("تم إرسال الكود إلى بريدك الإلكتروني.");
-    window.location.href = "cod.html"; // ← تم التوجيه إلى الصفحة المطلوبة
+    window.location.href = "newpass.html"; // ← تم التوجيه إلى الصفحة المطلوبة
 })
 
         .catch(error => {
